# smartdns-edge

./: .gitignore  Cargo.toml  Cross.toml  README.md  RESOLVE_EXAMPLES.txt  justfile  workers.js
.github/actions/setup/: action.yml
.github/workflows/: build.yml  test.yml  version.yml
docker/: Dockerfile
docs/: index.html
docs/en/: configuration.md  download.md  feedback.md  install&run.md  main.md
docs/en/config/: 1-basic-service.md  2-upstream-and-proxy.md  3-speed-check.md  4-dns-cache.md  5-domain-control.md  6-ip-control.md  7-split-routing.md  8-firewall-integration.md
docs/zh/: configuration.md  download.md  feedback.md  install&run.md  main.md
docs/zh/config/: 1-basic-service.md  2-upstream-and-proxy.md  3-speed-check.md  4-dns-cache.md  5-domain-control.md  6-ip-control.md  7-split-routing.md  8-firewall-integration.md
functions/: feedback.js
functions/download/: [[file]].js
hickory-dns/: Cargo.toml
hickory-dns/crates/proto/: Cargo.toml
hickory-dns/crates/proto/src/xfer/: dns_exchange.rs  dns_response.rs
hickory-dns/crates/resolver/: Cargo.toml
hickory-dns/crates/resolver/src/: cache.rs  caching_client.rs  hosts.rs  lookup.rs  lookup_ip.rs  resolver.rs
hickory-dns/crates/resolver/src/name_server/: connection_provider.rs  name_server.rs  name_server_pool.rs
include/: nftset.c  nftset.h
src/: app.rs  cli.rs  collections.rs  dns.rs  dns_client.rs  dns_conf.rs  dns_error.rs  dns_mw.rs  dns_mw_addr.rs  dns_mw_audit.rs  dns_mw_bogus.rs  dns_mw_cache.rs  dns_mw_dns64.rs  dns_mw_dnsmasq.rs  dns_mw_dualstack - 副本.rs  dns_mw_dualstack.rs  dns_mw_hosts.rs  dns_mw_nftset.rs  dns_mw_ns.rs  dns_rule.rs  dnsmasq.rs  log.rs  main - 副本.rs  main.rs  proxy - 副本.rs  proxy.rs  resolver.rs
src/api/: address.rs  audit.rs  cache.rs  config.rs  forward.rs  listener.rs  log.rs  mod.rs  nameserver.rs  openapi.rs  serve_dns.rs  system.rs
src/config/: bind_addr.rs  cache.rs  client_rule.rs  domain.rs  domain_rule.rs  domain_set.rs  speed_mode.rs
src/config/parser/: client_rule.rs  domain_rule.rs  domain_set.rs  mod.rs  nameserver.rs  options.rs  speed_mode.rs
src/config/parser/nom_recipes/: ipv4.rs  ipv6.rs  mac_addr.rs
src/ffi/: nftset.rs  nftset_sys.rs
src/infra/: arp.rs  http_client.rs  mapped_file.rs  mem_bytes.rs  ping.rs  process_guard.rs
src/libdns/custom/: connection_provider.rs
src/server/: http.rs  https.rs  mod.rs  net.rs  quic.rs  tcp.rs  tls.rs  udp.rs
src/service/: installer.rs  service_manager.rs
src/service/macos/: brew.rs  launchctl.rs
src/service/windows/: mod.rs  windows_service.rs
src/socks5/: mod.rs
src/third_ext/: num.rs  serde_ext.rs
src/zone/providers/: identity.rs  local_ptr.rs
surge-ping/src/: client.rs  ping.rs
